--- a/css/main.css
+++ b/css/main.css
@@ -84,7 +84,7 @@ main {
   display: flex;
   justify-content: space-around;
   align-items: center;
-  justify-content: left;
+  justify-items: left;
   align-items: flex-start;
   background-color: burlywood;
   width: 100%;
