--- a/css/main.css
+++ b/css/main.css
@@ -82,10 +82,8 @@ main {
 }
 .contenedor-grid .hijo3 {
   display: flex;
-  justify-content: space-around;
-  align-items: center;
-  justify-items: left;
-  align-items: flex-start;
+  justify-content: left;
+  align-content: left;
   background-color: burlywood;
   width: 100%;
   grid-area: hijo3;
@@ -94,9 +92,7 @@ main {
 }
 .contenedor-grid .hijo3 .logo {
   display: flex;
-  justify-content: space-around;
-  align-items: center;
-  float: left;
+  justify-content: left;
   padding: 40px;
   width: 120px;
   height: 120px;
@@ -105,35 +101,32 @@ main {
 }
 .contenedor-grid .hijo3 .logo .estilofooter {
   display: flex;
-  justify-content: space-around;
-  align-items: center;
-  align-items: flex-start;
+  float: left;
   margin-top: 40px;
 }
 
 @media (max-width: 700px) {
   .contenedor-grid {
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 650px 80px;
-    grid-template-areas: "hijo1 hijo2" "hijo3 hijo3";
+    grid-template-columns: 1fr;
+    grid-template-rows: 650px 650px 650px;
+    grid-template-areas: "hijo1 hijo1" "hijo2 hijo2" "hijo3 hijo3";
   }
 }
 /* PAGINA 1 */
 .grid-container {
   display: grid;
   grid-template-columns: 1fr 1fr;
-  grid-template-rows: 800px 100px;
-  grid-template-areas: "item1 item2" "imagen2 imagen2";
+  grid-template-rows: 500px 250px;
+  grid-template-areas: "item1 item7" "imagen2 imagen2";
 }
 .grid-container .item1 {
   display: flex;
   justify-content: space-around;
   align-items: center;
-  flex-direction: column;
   text-decoration: none;
   list-style-type: none;
   background-color: beige;
-  padding: 40px;
+  padding: 50px;
   margin-top: 20px;
   font-size: 25px;
   margin-bottom: 30px;
@@ -147,32 +140,38 @@ main {
 .grid-container .item1 h2 {
   margin-bottom: 30px;
 }
-.grid-container .item2 {
-  width: 70px;
-  height: 70px;
-  grid-area: item2;
+.grid-container .item7 {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  padding: 50px;
+  margin-top: 20px;
+  font-size: 25px;
+  margin-bottom: 30px;
+  grid-area: item7;
   height: 60vh;
-  margin-top: 80px;
 }
-.grid-container .item2 .cartanatal {
+.grid-container .item7 .c.natal {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  width: 250px;
+  height: 250px;
   margin-top: 80px;
-  width: 70px;
-  height: 70px;
 }
 .grid-container .imagen2 {
   display: flex;
   grid-area: imagen2;
   height: 20vh;
   width: 15%;
-  width: 15%;
   height: 80px;
 }
 
 @media (max-width: 700px) {
   .grid-container {
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 800px 100px;
-    grid-template-areas: "item1 item2" "imagen2 imagen2";
+    grid-template-columns: 1fr;
+    grid-template-rows: 600px 600px 600px;
+    grid-template-areas: "item1 item1" "item7 item7" "imagen2 imagen2 imagen2";
   }
 }
 .grid-container1 {
@@ -225,9 +224,9 @@ main {
 
 @media (max-width: 700px) {
   .grid-container1 {
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 800px 100px;
-    grid-template-areas: "item4 item5" "item6 item6";
+    grid-template-columns: 1fr;
+    grid-template-rows: 800px 800px 800px;
+    grid-template-areas: "item4 item4" "item5 item5" "item6 item6";
   }
 }
 
